...

  var moveCamera: (CameraUpdate) -> Unit by remember { mutableStateOf({ _ -> }) }

  if (discoverScreenState.screen == DiscoverDisplayType.LIST) {
    Column(
        modifier =
            Modifier.testTag("discoveryScreen").background(MaterialTheme.colorScheme.background)) {
          HeaderComposable(
              discoverScreenState.screen,
              discoverScreenState.range,
              discoverScreenState.selectedLocality,
              discoverScreenCallBacks.fetchActivities,
              discoverScreenCallBacks.setScreen,
...
              discoverScreenCallBacks.updateInitialPosition,
              moveCamera,
              isOnline)

          if (discoverScreenState.isLoading) {
            if (isOnline == ConnectionState.CONNECTED) {
              LoadingAnim(width = 35, tag = "LoadingBarDiscover")
            } else {
              Column(
                  verticalArrangement = Arrangement.Center, modifier = Modifier.fillMaxHeight()) {
                    Text(
                        text = LocalContext.current.getString(R.string.offline_discover_text),
                        textAlign = TextAlign.Center)
                  }
            }
          } else if (discoverScreenState.activities.isEmpty()) {
            EmptyActivityList()
          } else {
            LazyColumn {
              item {
                Spacer(modifier = Modifier.height(8.dp))

                ActivitiesDisplay(
...
    Dialog(onDismissRequest = { displayWeather.value = false }) {
      Surface { WeatherReportBig(weather = weather, displayWind = false) {} }
    }
  }

  Surface(
      modifier = Modifier.fillMaxWidth().testTag("header"),
      color = MaterialTheme.colorScheme.background) {
        Column {
          // Location bar
          Row(
              modifier =
                  Modifier.fillMaxWidth()
                      .padding(horizontal = 16.dp, vertical = 8.dp)
                      .testTag("locationBar"),
              verticalAlignment = Alignment.CenterVertically) {
                Row(
                    verticalAlignment = Alignment.CenterVertically,
                    modifier =
                        Modifier.clickable(onClick = { navigateToRangeSearch() })
                            .testTag("locationRow")) {
                      Column {
                        Icon(
                            Icons.Filled.LocationOn,
                            contentDescription = "Location icon",
                            tint = MaterialTheme.colorScheme.primary,
                            modifier = Modifier.size(24.dp).testTag("localityIcon"))
...
                              text = selectedLocality.first,
                              style = MaterialTheme.typography.bodyMedium,
                              modifier = Modifier.testTag("locationText"))

                          IconButton(
                              onClick = navigateToRangeSearch,
                              modifier = Modifier.size(24.dp).testTag("locationButton"),
                              enabled = (isOnline == ConnectionState.CONNECTED)) {
                                Icon(
                                    Icons.Outlined.KeyboardArrowDown,
                                    contentDescription = "Location button",
                                    tint = MaterialTheme.colorScheme.primary,
                                    modifier = Modifier.size(24.dp).testTag("locationIcon"))
...
              modifier =
                  Modifier.fillMaxWidth()
                      .padding(start = 16.dp, end = 16.dp, top = 8.dp, bottom = 0.dp)
                      .testTag("searchBar"),
              verticalAlignment = Alignment.CenterVertically) {
                changeText =
                    searchBarComponent(
                        Modifier.weight(1f).testTag("searchBarComponent"),
                        onSearch = { fetchSuggestion(it) })

                Spacer(modifier = Modifier.width(8.dp))

                IconButton(
                    onClick = { navigateToFilter() },
                    modifier =
                        Modifier.size(56.dp)
                            .border(
                                1.dp, MaterialTheme.colorScheme.outline, RoundedCornerShape(12.dp))
                            .testTag("filterButton"),
                    enabled = isOnline == ConnectionState.CONNECTED) {
                      Icon(
                          painter = painterResource(id = R.drawable.filter_icon),
                          contentDescription = "Filter button",
                          modifier = Modifier.size(24.dp).testTag("filterIcon"))
                    }
...
          LazyColumn(
              modifier =
                  Modifier.fillMaxWidth()
                      .padding(horizontal = 16.dp, vertical = 8.dp)
                      .heightIn(0.dp, 130.dp)) {
                items(suggestions.count()) { i ->
                  val suggestion = suggestions.entries.elementAt(i)
                  val scope = rememberCoroutineScope()
                  Card(
                      modifier =
                          Modifier.fillMaxWidth().padding(4.dp).testTag("suggestion").clickable {
                            scope.launch {
                              fManager.clearFocus()
...

          if (screen == DiscoverDisplayType.LIST) {
            Row(
                modifier =
                    Modifier.fillMaxWidth()
                        .padding(16.dp, 8.dp, 16.dp, 8.dp)
                        .testTag("sortingText"),
                verticalAlignment = Alignment.CenterVertically) {
                  DropDownMenuComponent(
                      items = OrderingBy.values().toList(),
                      selectedItem = orderingBy,
                      onItemSelected = { o -> updateOrderingBy(o) },
                      toStr = { o -> o.resourcesToString(LocalContext.current) },
...
      modifier = Modifier.fillMaxSize().testTag("EmptyActivityList").padding(18.dp, 25.dp),
      verticalArrangement = Arrangement.Center,
      horizontalAlignment = Alignment.CenterHorizontally) {
        Icon(
            painterResource(id = R.drawable.not_found),
            contentDescription = "No Activities",
            modifier = Modifier.size(85.dp).testTag("NoActivitiesLogo"))
        Row(verticalAlignment = Alignment.CenterVertically, modifier = Modifier.fillMaxWidth()) {
          Text(
              text = LocalContext.current.getString(R.string.no_activities),
              style = MaterialTheme.typography.bodyLarge,
              textAlign = TextAlign.Center)
        }
...
