...
  val color =
      if (isEnabled) MaterialTheme.colorScheme.primary
      else MaterialTheme.colorScheme.onSurface.copy(alpha = 0.3f)

  Row(
      modifier =
          modifier.clickable(onClick = { if (isEnabled) expanded = true }).testTag("textValueRow"),
      verticalAlignment = Alignment.CenterVertically) {
        Text(
            "$fieldText:",
            style = MaterialTheme.typography.bodyMedium,
            modifier = Modifier.testTag("fieldTextValue"))

...

            Icon(
                imageVector = Icons.Outlined.KeyboardArrowDown,
                contentDescription = "Dropdown",
                modifier =
                    Modifier.clickable(onClick = { if (isEnabled) expanded = true })
                        .testTag("spinnerIcon"),
                tint = color)
          }

          DropdownMenu(
              expanded = expanded, onDismissRequest = { if (isEnabled) expanded = false }) {
                items.forEachIndexed { index, label ->
...
