...
  val initialZoom =
      calculateZoomLevel(initialRadius, screenWidthPx, discoverScreenState.centerPoint.latitude)

  var radius by remember { mutableDoubleStateOf(initialRadius) }

  // This is the main composable that will display the range search screen
  Column(modifier = Modifier.fillMaxSize().testTag("rangeSearch")) {

    // Top app bar
    TopAppBar(
        title = {
          Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.Center) {
            Text(
...
